--- a/src/body/118n/locales/eu/berriak.json
+++ b/src/body/118n/locales/eu/berriak.json
@@ -1,78 +1,55 @@
 {
-  "carousel": {
-    "items": [
-      {
-        "id": 1,
-        "title": "Zure txakurraren sudurra bakarra da",
-        "date": "2024/11/27",
-        "description": "Zerbait susmatzen zenuen ziur, baina zure lagun iletsuaren sudurra goxokien detektagailu infalible bat izateaz gain, […]"
-      },
-      {
-        "id": 2,
-        "title": "Txakurren obesitatea",
-        "date": "2024/9/15",
-        "description": "Txakurrengan obesitatea ohikoagoa da uste duguna baino eta arrazoi desberdinetan izan daiteke. […]"
-      },
-      {
-        "id": 3,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
-      },
-      {
-        "id": 4,
-        "title": "Txakurrei buruzko beste bitxikeria bat",
-        "date": "2024/11/28",
-        "description": "Txakurren oinak ere ezaugarri bereziak dituzte, eta horrek izugarriak egiten ditu […]"
-      },
-      {
-        "id": 5,
-        "title": "Txakurrak eta haien komunikazioa",
-        "date": "2024/12/10",
-        "description": "Txakurrak gorputz hizkuntza erabiliz nola komunikatzen diren ezagutu zurekin […]"
-      },
-      {
-        "id": 6,
-        "title": "Txakurren ametsak",
-        "date": "2024/6/19",
-        "description": "Ba al zenekien txakurrek gizakiek bezala amets egiten dutela? Zure txakurraren loaren zikloari buruz gehiago ikasi […]"
-      },
-      {
-        "id": 7,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
-      },
-      {
-        "id": 8,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
-      },
-      {
-        "id": 9,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
-      },
-      {
-        "id": 10,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
-      },
-      {
-        "id": 11,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
-      },
-      {
-        "id": 12,
-        "title": "Procesionaria dagoeneko hemen dago",
-        "date": "2024/4/3",
-        "description": "Procesionaria dagoeneko hemen dago eta arriskutsua izan daiteke zure txakurrentzat. Babesteko nola ikasi […]"
+        "carousel": {
+          "items": {
+            "0": {
+              "title": "Zure txakurraren sudurra bakarra da",
+              "description": "Ziur zerbait susmatzen zenuela, baina zure lagun pelutsaren sudurra ez da bakarrik gozokiak detektatzeko gai..."
+            },
+            "1": {
+              "title": "Txakurren obesitatea",
+              "description": "Txakurren obesitatea uste dugun baino ohikoagoa da, eta hainbat kausa izan ditzake..."
+            },
+            "2": {
+              "title": "Prozesionariak hemen daude",
+              "description": "Prozesionariak hemen daude eta zure txakurrentzat arriskutsuak izan daitezke. Ikasi nola babestu..."
+            },
+            "3": {
+              "title": "Txakurren beste jakintza bat",
+              "description": "Txakurren hankek ezaugarri bereziak dituzte, eta horrek izugarri egiten ditu..."
+            },
+            "4": {
+              "title": "Txakurrak eta beren komunikazioa",
+              "description": "Ikasi nola erabiltzen duten txakurren gorputz-hizkuntza zurekin komunikatzeko..."
+            },
+            "5": {
+              "title": "Txakurren loa",
+              "description": "Badakizue txakurrak ere amets egiten dutela, giza moduan? Ikasi zure txakurraren lo-zikloari buruz..."
+            },
+            "6": {
+              "title": "Txakurren beste jakintza bat",
+              "description": "Txakurren hankek ezaugarri bereziak dituzte, eta horrek izugarri egiten ditu..."
+            },
+            "7": {
+              "title": "Txakurrak eta beren komunikazioa",
+              "description": "Ikasi nola erabiltzen duten txakurren gorputz-hizkuntza zurekin komunikatzeko..."
+            },
+            "8": {
+              "title": "Txakurren loa",
+              "description": "Badakizue txakurrak ere amets egiten dutela, giza moduan? Ikasi zure txakurraren lo-zikloari buruz..."
+            },
+            "9": {
+              "title": "Prozesionariak hemen daude",
+              "description": "Prozesionariak hemen daude eta zure txakurrentzat arriskutsuak izan daitezke. Ikasi nola babestu..."
+            },
+            "10": {
+              "title": "Txakurren beste jakintza bat",
+              "description": "Txakurren hankek ezaugarri bereziak dituzte, eta horrek izugarri egiten ditu..."
+            },
+            "11": {
+              "title": "Txakurrak eta beren komunikazioa",
+              "description": "Ikasi nola erabiltzen duten txakurren gorputz-hizkuntza zurekin komunikatzeko..."
+            }
+          }
+        }
       }
-    ]
-  }
-}
+      
