Login eta crear usuarios eginda

--- a/Frontend/src/118n/locales/es/menu/menu.json
+++ b/Frontend/src/118n/locales/es/menu/menu.json
@@ -3,6 +3,8 @@
   "galduta": "Perdidos",
   "mapa": "Mapa",
   "adopzio": "Adopcion",
-  "denda": "Tienda"
+  "denda": "Tienda",
+  "Saioa_sortu": "Crear Usuario",
+  "login": "Iniciar Sesion"
 }
   
