--- a/Frontend/src/118n/locales/eu/menu/menu.json
+++ b/Frontend/src/118n/locales/eu/menu/menu.json
@@ -3,6 +3,8 @@
   "galduta": "Galduta",
   "mapa": "Mapa",
   "adopzio": "Adopzioa",
-  "denda": "Denda"
+  "denda": "Denda",
+  "Saioa_sortu": "Erabiltzaiea Sortu",
+  "login": "Saioa Hasi"
 }
   
