add: Erabiltzaileak sortu daitezke
Konektatu egin da frontEnd-a API-arekin, eta erabiltzaileak sortzen dira

--- a/Frontend/src/118n/locales/eu/menu/saioa_sortu.json
+++ b/Frontend/src/118n/locales/eu/menu/saioa_sortu.json
@@ -5,5 +5,7 @@
     "email":"Email",
     "pasahitza":"Pasahitza",
     "pasahitza_ber": "Berretsi Pasahitza",
-    "input": "Bidali"
+    "input": "Bidali",
+    "fecha_nacimiento":"Jaiotze Data"
+
 }
