--- a/Frontend/src/118n/locales/es/menu/saioa_sortu.json
+++ b/Frontend/src/118n/locales/es/menu/saioa_sortu.json
@@ -5,5 +5,6 @@
     "email":"Gmail",
     "pasahitza":"Contraseña",
     "pasahitza_ber": "Confirmar Contraseña",
-    "input": "Enviar"
+    "input": "Enviar",
+    "fecha_nacimiento":"Fecha de Nacimiento"
 }
