add: administrazio atalerako konexioa gehituta
Gehitu egin da administrazio atalerako linka eta behar diren segurtasun atalak gehituta daude

--- a/Frontend/src/118n/locales/es/menu/user.json
+++ b/Frontend/src/118n/locales/es/menu/user.json
@@ -3,6 +3,7 @@
     "profila": "Perfil",
     "chat": "Chat",
     "konfig": "Konfiguracion",
-    "exit": "Cerrar Sesion"
+    "exit": "Cerrar Sesion",
+    "administration":"Administrar"
   }
     
