--- a/Frontend/src/118n/locales/eu/menu/user.json
+++ b/Frontend/src/118n/locales/eu/menu/user.json
@@ -3,6 +3,8 @@
     "profila": "Profila",
     "chat": "Chat",
     "konfig": "Konfigurazioa",
-    "exit": "Saioa Itxi"
+    "exit": "Saioa Itxi",
+    "administration":"Administratu"
+
   }
     
