--- a/Frontend/src/118n/locales/eu/footer/datos.json
+++ b/Frontend/src/118n/locales/eu/footer/datos.json
@@ -6,6 +6,6 @@
     "desarrollado": "Julen eta Manexek garatua",
     "datos": "Datuak",
     "contact": "Harremanetan jarri",
-    "hora":"Hastelenetik Ostiralera",
+    "hora":"Astelehenetik Ostiralera",
     "hora2":"8:00-14:00"
 }
