--- a/Frontend/src/118n/locales/es/admin/menua.json
+++ b/Frontend/src/118n/locales/es/admin/menua.json
@@ -1,5 +1,6 @@
 {
     "notiziak":"Noticias",
     "galduta":"Perdidos",
-    "adoptatu": "Adoptar"
+    "adoptatu": "Adoptar",
+    "Erabiltzaileak":"Erabiltzaileak"
 }
