--- a/Frontend/src/118n/locales/eu/admin/menua.json
+++ b/Frontend/src/118n/locales/eu/admin/menua.json
@@ -1,5 +1,6 @@
 {
     "notiziak":"Albisteak",
     "galduta":"Galdutakoak",
-    "adoptatu": "Adoptatu"
+    "adoptatu": "Adoptatu",
+    "Erabiltzaileak":"Usuarios"
 }
