add: profilan animaliak ikusten dira
Profilan animaliak ikusi daitezke arazorik gabe

--- a/Frontend/src/118n/locales/es/user/userProfile.json
+++ b/Frontend/src/118n/locales/es/user/userProfile.json
@@ -4,6 +4,8 @@
     "apellido": "Apellido",
     "gmail": "Gmail",
     "password": "Contraseña",
-    "animals": "Mis Animales:"
+    "animals": "Mis Animales:",
+    "edit": "Editar",
+    "add": "Añadir"
   }
     
