--- a/Frontend/src/118n/locales/eu/user/userProfile.json
+++ b/Frontend/src/118n/locales/eu/user/userProfile.json
@@ -4,6 +4,8 @@
     "apellido": "Abizena",
     "gmail": "Gmail",
     "password": "Pasahitza",
-    "animals": "Nire animaliak:"
+    "animals": "Nire animaliak:",
+    "edit": "Editatu",
+    "add": "Gehitu"
   }
     
