--- a/Frontend/src/118n/locales/es/user/userProfile.json
+++ b/Frontend/src/118n/locales/es/user/userProfile.json
@@ -6,6 +6,10 @@
     "password": "Contraseña",
     "animals": "Mis Animales:",
     "edit": "Editar",
-    "add": "Añadir"
+    "add": "Añadir",
+    "deleteButtom": "Borrar usuario",
+    "delete": "Estas seguro que quieres borrar tu usuario?",
+    "cancel": "No, cancelar",
+    "confirmar": "Si, estoy seguro"
   }
     
