--- a/Frontend/src/118n/locales/eu/user/userProfile.json
+++ b/Frontend/src/118n/locales/eu/user/userProfile.json
@@ -6,6 +6,10 @@
     "password": "Pasahitza",
     "animals": "Nire animaliak:",
     "edit": "Editatu",
-    "add": "Gehitu"
+    "add": "Gehitu",
+    "deleteButtom": "Erabiltzailea borratu",
+    "delete": "Seguru zaude nahi duzula erabiltzailea borratu?",
+    "cancel": "Ez, kantzelatu",
+    "confirmar": "Bai, borratu nahi dut"
   }
     
