add: animali galdutak gehitu daitezke

--- a/Frontend/src/118n/locales/es/admin/galduta.json
+++ b/Frontend/src/118n/locales/es/admin/galduta.json
@@ -17,6 +17,8 @@
     "Profil":"Imagen de Profil",
     "Beste": "Otras imagenes",
     "Beharrak":"Necesidades especiales",
-    "Deskribapena":"Descripción"
+    "Deskribapena":"Descripción",
+    "Selecciona_mota":"Escoje el animal",
+    "razaSelecionar":"Seleciona la raza"
 
 }
