--- a/Frontend/src/118n/locales/eu/admin/galduta.json
+++ b/Frontend/src/118n/locales/eu/admin/galduta.json
@@ -17,6 +17,8 @@
     "Profil":"Profil Irudia",
     "Beste": "Beste irudi batzuk",
     "Beharrak":"Behar bereziak",
-    "Deskribapena":"Deskribapena"
+    "Deskribapena":"Deskribapena",
+    "Selecciona_mota":"Aukeratu animali mota",
+    "razaSelecionar":"Arraza aukeratu"
 
 }
