add: erabiltzaile lista ikusten da

--- a/Frontend/src/118n/locales/es/admin/erabiltzaile_panela.json
+++ b/Frontend/src/118n/locales/es/admin/erabiltzaile_panela.json
@@ -7,6 +7,8 @@
     "NAN":"DNI",
     "Jaio_data":"Cumpleaños",
     "Elkartea":"Protectora",
-    "Aktibatuta":"Actibado"
+    "Aktibatuta":"Actibado",
+    "Bai":"Si",
+    "Ez": "No"
 
 }
