--- a/Frontend/src/118n/locales/eu/admin/erabiltzaile_panela.json
+++ b/Frontend/src/118n/locales/eu/admin/erabiltzaile_panela.json
@@ -7,6 +7,8 @@
     "NAN":"NAN",
     "Jaio_data":"Urtebetetzea",
     "Elkartea":"Babes Elkartea",
-    "Aktibatuta":"Aktibatuta"
+    "Aktibatuta":"Aktibatuta",
+    "Bai":"Bai",
+    "Ez": "Ez"
 
 }
