--- a/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
@@ -1,6 +1,6 @@
 {
     "Adoptatu":"Adoptar",
-    "Babes_Elk":"Protektora",
+    "Babes_Elk":"Protectora",
     "Sexua":"Sexo",
     "Arraza":"Raza",
     "Jaiotze_data":"Nacimiento",
