add: animalien datuak

--- a/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
@@ -6,5 +6,7 @@
     "Jaiotze_data":"Nacimiento",
     "Esterilizatua":"Esterilizado",
     "Etxekoa":"Casero",
-    "Deskribapena":"Descripcion"
+    "Deskribapena":"Descripcion",
+    "arra":"Macho",
+    "emea":"Hembra"
 }
