--- a/Frontend/src/118n/locales/eu/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/eu/menu/adoptatu_animalia.json
@@ -6,5 +6,7 @@
     "Jaiotze_data":"Jaiotze data",
     "Esterilizatua":"Esterilizatua",
     "Etxekoa":"Etxekoa",
-    "Deskribapena":"Deskribapena"
+    "Deskribapena":"Deskribapena",
+    "arra":"arra",
+    "emea":"emea"
 }
