fix: modalMenua eginda
Saiatzen bazara adoptatzen animali bat saioa gabe, mezu bat agertzen da

--- a/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
@@ -8,5 +8,8 @@
     "Etxekoa":"Casero",
     "Deskribapena":"Descripcion",
     "arra":"Macho",
-    "emea":"Hembra"
+    "emea":"Hembra",
+    "ezSaioaHasita":"No tienes la sesión iniciada, inicia sesión o regístrate.",
+    "saioaHasi":"Inicia Sesion",
+    "kontuaSortu":"Crear Cuenta"
 }
