--- a/Frontend/src/118n/locales/eu/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/eu/menu/adoptatu_animalia.json
@@ -8,5 +8,8 @@
     "Etxekoa":"Etxekoa",
     "Deskribapena":"Deskribapena",
     "arra":"arra",
-    "emea":"emea"
+    "emea":"emea",
+    "ezSaioaHasita":"Ez daukazu saioa hasita, saioa hasi edo erregistratu zaitez.",
+    "saioaHasi":"Saioa hasi",
+    "kontuaSortu":"Kontua sortu"
 }
