add: konfiguratuta errore itzulpenak

--- a/Frontend/src/118n/locales/es/menu/saioa_sortu.json
+++ b/Frontend/src/118n/locales/es/menu/saioa_sortu.json
@@ -2,7 +2,7 @@
     "izena":"Nombre",
     "abizena":"Apellido",
     "nan":"DNI",
-    "email":"Gmail",
+    "email":"Email",
     "pasahitza":"Contraseña",
     "pasahitza_ber": "Confirmar Contraseña",
     "input": "Enviar",
