add: menuan gehituta protektora lista
Gehitu egin da menuan protektora lista guztia

--- a/Frontend/src/118n/locales/es/admin/menua.json
+++ b/Frontend/src/118n/locales/es/admin/menua.json
@@ -2,5 +2,6 @@
     "notiziak":"Noticias",
     "galduta":"Perdidos",
     "adoptatu": "Adoptar",
-    "Erabiltzaileak":"Erabiltzaileak"
+    "Erabiltzaileak":"Usuarios",
+    "Protektora":"Protectoras"
 }
