--- a/Frontend/src/118n/locales/eu/admin/menua.json
+++ b/Frontend/src/118n/locales/eu/admin/menua.json
@@ -2,5 +2,7 @@
     "notiziak":"Albisteak",
     "galduta":"Galdutakoak",
     "adoptatu": "Adoptatu",
-    "Erabiltzaileak":"Usuarios"
+    "Erabiltzaileak":"Erabiltzaileak",
+    "Protektora":"Babes-Elkarteak"
+
 }
