Adoptatu orria bukatuta

--- a/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/es/menu/adoptatu_animalia.json
@@ -11,5 +11,11 @@
     "emea":"Hembra",
     "ezSaioaHasita":"No tienes la sesión iniciada, inicia sesión o regístrate.",
     "saioaHasi":"Inicia Sesion",
-    "kontuaSortu":"Crear Cuenta"
+    "kontuaSortu":"Crear Cuenta",
+    "gehiago":"Mas",
+    "Premiazkoak":"De primera necesidad",
+    "Txakurrak":"PERROS",
+    "ppp":"PERROS PPP",
+    "Katuak":"GATOS",
+    "Besteak":"OTROS"
 }
