--- a/Frontend/src/118n/locales/eu/menu/adoptatu_animalia.json
+++ b/Frontend/src/118n/locales/eu/menu/adoptatu_animalia.json
@@ -11,5 +11,11 @@
     "emea":"emea",
     "ezSaioaHasita":"Ez daukazu saioa hasita, saioa hasi edo erregistratu zaitez.",
     "saioaHasi":"Saioa hasi",
-    "kontuaSortu":"Kontua sortu"
+    "kontuaSortu":"Kontua sortu",
+    "gehiago":"Gehiago",
+    "Premiazkoak":"Premiazkoak",
+    "Txakurrak":"TXAKURRAK",
+    "ppp":"TXAKURRAK PPP",
+    "Katuak":"KATUAK",
+    "Besteak":"BESTEAK"
 }
