--- a/Frontend/src/118n/locales/es/admin/adoptatu.json
+++ b/Frontend/src/118n/locales/es/admin/adoptatu.json
@@ -1,5 +1,6 @@
 {
-    "Titulo":"Añadir Animal Para Adoptar",
+    "Titulo1":"Añadir animal para adoptar",
+    "Titulo2":"Añadir animal",
     "Arraza":"Raza",
     "Etxekoa":"De Casa"
 }
