--- a/Frontend/src/118n/locales/eu/admin/adoptatu.json
+++ b/Frontend/src/118n/locales/eu/admin/adoptatu.json
@@ -1,5 +1,6 @@
 {
-    "Titulo":"Adoptatzeko animalia gehitu",
+    "Titulo1":"Adoptatzeko animalia gehitu",
+    "Titulo2":"Animalia gehitu",
     "Arraza":"Arraza",
     "Etxekoa":"Etxekoa"
 }
