--- a/Frontend/src/118n/locales/es/admin/galduta.json
+++ b/Frontend/src/118n/locales/es/admin/galduta.json
@@ -19,6 +19,8 @@
     "Beharrak":"Necesidades especiales",
     "Deskribapena":"Descripción",
     "Selecciona_mota":"Escoje el animal",
-    "razaSelecionar":"Seleciona la raza"
+    "razaSelecionar":"Seleciona la raza",
+    "animalEdit":"Editar animal"
+
 
 }
