--- a/Frontend/src/118n/locales/eu/admin/galduta.json
+++ b/Frontend/src/118n/locales/eu/admin/galduta.json
@@ -19,6 +19,8 @@
     "Beharrak":"Behar bereziak",
     "Deskribapena":"Deskribapena",
     "Selecciona_mota":"Aukeratu animali mota",
-    "razaSelecionar":"Arraza aukeratu"
+    "razaSelecionar":"Arraza aukeratu",
+    "animalEdit":"Editatu animalia"
+
 
 }
