Galdutako animali datuak ikusteko eginda

--- a/Frontend/src/118n/locales/es/menu/galduta_animalia.json
+++ b/Frontend/src/118n/locales/es/menu/galduta_animalia.json
@@ -6,5 +6,6 @@
     "Jaiotze_data":"Nacimiento",
     "Esterilizatua":"Esterilizado",
     "Etxekoa":"Casero",
-    "Deskribapena":"Descripcion"
+    "Deskribapena":"Descripcion del Animal",
+    "Deskribapena_Gal":"Detalles"
 }
