--- a/Frontend/src/118n/locales/eu/menu/galduta_animalia.json
+++ b/Frontend/src/118n/locales/eu/menu/galduta_animalia.json
@@ -6,5 +6,6 @@
     "Jaiotze_data":"Jaiotze data",
     "Esterilizatua":"Esterilizatua",
     "Etxekoa":"Etxekoa",
-    "Deskribapena":"Deskribapena"
+    "Deskribapena":"Animaliaren deskribapena",
+    "Deskribapena_Gal":"Xehetasunak"
 }
