--- a/Frontend/src/118n/locales/es/menu/menu.json
+++ b/Frontend/src/118n/locales/es/menu/menu.json
@@ -5,6 +5,7 @@
   "adopzio": "Adopcion",
   "denda": "Tienda",
   "Saioa_sortu": "Crear Usuario",
-  "login": "Iniciar Sesion"
+  "login": "Iniciar Sesion",
+  "mas":"Mas"
 }
   
