--- a/Frontend/src/118n/locales/eu/menu/menu.json
+++ b/Frontend/src/118n/locales/eu/menu/menu.json
@@ -5,6 +5,7 @@
   "adopzio": "Adopzioa",
   "denda": "Denda",
   "Saioa_sortu": "Erabiltzaiea Sortu",
-  "login": "Saioa Hasi"
+  "login": "Saioa Hasi",
+  "mas":"Gehio"
 }
   
