--- a/Frontend/src/118n/locales/eu/user/userProfile.json
+++ b/Frontend/src/118n/locales/eu/user/userProfile.json
@@ -7,7 +7,7 @@
     "animals": "Nire animaliak:",
     "edit": "Editatu",
     "add": "Gehitu",
-    "deleteButtom": "Erabiltzailea borratu",
+    "deleteButtom": "Erabiltzailea ezabatu",
     "delete": "Seguru zaude nahi duzula erabiltzailea borratu?",
     "cancel": "Ez, kantzelatu",
     "confirmar": "Bai, borratu nahi dut"
