--- a/Frontend/src/118n/locales/eu/admin/galduta.json
+++ b/Frontend/src/118n/locales/eu/admin/galduta.json
@@ -20,7 +20,9 @@
     "Deskribapena":"Deskribapena",
     "Selecciona_mota":"Aukeratu animali mota",
     "razaSelecionar":"Arraza aukeratu",
-    "animalEdit":"Editatu animalia"
+    "animalEdit":"Editatu animalia",
+    "animalLost":"Animalia galduta"
+
 
 
 }
