add: falta ziren hitzulpen batzuk gehituta

--- a/Frontend/src/118n/locales/es/admin/galduta.json
+++ b/Frontend/src/118n/locales/es/admin/galduta.json
@@ -21,7 +21,9 @@
     "Selecciona_mota":"Escoje el animal",
     "razaSelecionar":"Seleciona la raza",
     "animalEdit":"Editar animal",
-    "animalLost":"Animal perdido"
+    "animalLost":"Animal perdido",
+    "noiz":"Fecha"
+
 
 
 
