--- a/Frontend/src/118n/locales/eu/admin/galduta.json
+++ b/Frontend/src/118n/locales/eu/admin/galduta.json
@@ -21,7 +21,8 @@
     "Selecciona_mota":"Aukeratu animali mota",
     "razaSelecionar":"Arraza aukeratu",
     "animalEdit":"Editatu animalia",
-    "animalLost":"Animalia galduta"
+    "animalLost":"Animalia galduta",
+    "noiz":"Data"
 
 
 
