--- a/Frontend/src/118n/locales/es/admin/menua.json
+++ b/Frontend/src/118n/locales/es/admin/menua.json
@@ -1,7 +1,7 @@
 {
     "notiziak":"Noticias",
     "galduta":"Perdidos",
-    "adoptatu": "Adoptar",
+    "adoptatu": "Animales",
     "Erabiltzaileak":"Usuarios",
     "Protektora":"Protectoras"
 }
