--- a/Frontend/src/118n/locales/eu/admin/menua.json
+++ b/Frontend/src/118n/locales/eu/admin/menua.json
@@ -1,7 +1,7 @@
 {
     "notiziak":"Albisteak",
     "galduta":"Galdutakoak",
-    "adoptatu": "Adoptatu",
+    "adoptatu": "Animaliak",
     "Erabiltzaileak":"Erabiltzaileak",
     "Protektora":"Babes-Elkarteak"
 
